# card_reader_backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
src/: __init__.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  settings.py
src/logging/: __init__.py  logger.py
src/nfc/: __init__.py  reader.py
src/schemas/: __init__.py  models.py
src/services/: __init__.py  user_service.py
tests/: conftest.py
tests/api/: __init__.py  test_routes.py
tests/nfc/: __init__.py  test_reader.py
tests/schemas/: test_models.py
tests/services/: test_user_service.py
